Add Custom Dashboard and Auth with Breeze

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=1f51e2a1e8e2c1577e2d9cf321eadcaf",
-    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7d8ad5cb9c940"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/style.css": "/css/style.css",
+    "/assets/img/profil.jpeg": "/assets/img/profil.jpeg"
 }
