--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-snappy": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.8",
@@ -19,6 +22,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^2.1",
         "phpstan/phpstan": "^1.7",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0",
