--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "stripe/stripe-php": "^8.9",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
