--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/assets/img/101_cloud.jpg": "/assets/img/101_cloud.jpg",
     "/assets/img/101_cloud.svg": "/assets/img/101_cloud.svg",
     "/assets/img/favicon.png": "/assets/img/favicon.png",
+    "/assets/img/logo-bi.png": "/assets/img/logo-bi.png",
     "/assets/img/logo.png": "/assets/img/logo.png",
     "/assets/img/logo_navbar.png": "/assets/img/logo_navbar.png",
     "/assets/img/profil.jpeg": "/assets/img/profil.jpeg"
